--- a/ctflask/templates/layout.html
+++ b/ctflask/templates/layout.html
@@ -62,9 +62,7 @@
                 <!--  -->
                 <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link {% if active_c %} active {% endif %}" aria-current="page" href="#" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#data-card" 
+                    <a class="nav-link {% if active_c %} active {% endif %}" href="{{ url_for('load_char') }}"
                     id="data-char-link">
                      <span data-feather="bar-chart-2" class="align-text-bottom"></span>
                      Data Characterization
@@ -95,5 +93,10 @@
     </div>
     <script src="{{ url_for('static', filename='bootstrap.bundle.min.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="{{ url_for('static', filename='dashboard.js') }}"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            feather.replace(); // Ensure Feather Icons load immediately
+        });
+    </script>
   </body>
 </html>
