--- a/ctflask/templates/session_preprocessing.html
+++ b/ctflask/templates/session_preprocessing.html
@@ -193,6 +193,7 @@ $(document).ready(function() {
     {% endif %}
 </div>
 
+<h3>Dicom Viewer</h3><br>
 <div style="display: flex; justify-content: space-between; align-items: flex-start; gap: 20px;">
     <div style="flex: 1; text-align: center;">
         <select class="form-control form-select" id="datasetid" required>
