--- a/ctflask/templates/layout.html
+++ b/ctflask/templates/layout.html
@@ -77,7 +77,7 @@
                 </ul>
                 <ul class="nav flex-column mb-2">
                 <li class="nav-item">
-                    <a class="nav-link {% if active_link %} active {% endif %}" href="#" style="">
+                    <a class="nav-link {% if active_r %} active {% endif %}" href="{{ url_for('load_robustness') }}" style="">
                     <span data-feather="file-text" class="align-text-bottom"></span>
                     Robustness Analysis
                     </a>
