--- a/ctflask/templates/session_characterization.html
+++ b/ctflask/templates/session_characterization.html
@@ -98,15 +98,6 @@ $(document).ready(function () {
 
 });
 </script>
-<!-- <style>
-    /* Ensure plots never overflow their container */
-    .plotly-graph-div {
-        width: 100% !important;
-        max-width: 100% !important;
-        height: auto !important;
-        overflow: hidden;
-    }
-</style> -->
 {% endblock header %}
 
 {% block content %}
@@ -131,31 +122,44 @@ $(document).ready(function () {
     </ul>
 
     <div class="tab-content mt-3" id="analysisTabsContent">
+
         <!-- Voxel-Level Analysis -->
         <div class="tab-pane fade show active" id="voxel" role="tabpanel">
             <h3 class="mt-3">Intensity Distribution</h3>
             <div class="row">
-                <div class="col-md-6">
-                    <div>{{ figures['histogram'] | safe if figures else 'No data available' }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['histogram'] | safe if figures else 'No data available' }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <div>{{ figures['kde'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['kde'] | safe if figures }}
+                    </div>
                 </div>
             </div>
 
             <h3 class="mt-4">Statistical Properties</h3>
             <div class="row">
-                <div class="col-md-6">
-                    <div>{{ figures['skewness'] | safe if figures else 'No data available' }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['skewness'] | safe if figures else 'No data available' }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <div>{{ figures['kurtosis'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['kurtosis'] | safe if figures }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <div>{{ figures['kl'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['kl'] | safe if figures }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <div>{{ figures['snr'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['snr'] | safe if figures }}
+                    </div>
                 </div>
             </div>
         </div>
@@ -164,16 +168,22 @@ $(document).ready(function () {
         <div class="tab-pane fade" id="metadata" role="tabpanel">
             <h3 class="mt-3">Header Variability</h3>
             <div class="row">
-                <div class="col-md-6">
-                    <div>{{ figures['manufacturer'] | safe if figures else 'No data available' }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['manufacturer'] | safe if figures else 'No data available' }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <div>{{ figures['convolution_kernel'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['convolution_kernel'] | safe if figures }}
+                    </div>
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col-md-6">
-                    <div>{{ figures['slice_thickness'] | safe if figures }}</div>
+                <div class="col-md-6 mb-3">
+                    <div class="border p-3 rounded shadow bg-white">
+                        {{ figures['slice_thickness'] | safe if figures }}
+                    </div>
                 </div>
             </div>
         </div>
@@ -186,7 +196,6 @@ $(document).ready(function () {
                     <form id="dataset-feature-form">    
                         <!-- Features Section -->
                         <div class="mb-3">
-                            <!-- <label class="form-label">Select Features:</label> -->
                             <div id="feature-checkboxes" class="row">
                                 {% if param.feature_names %}
                                 <label class="form-label">Select Features:</label>
@@ -214,15 +223,10 @@ $(document).ready(function () {
                 </div>
             </div>
 
-
             <div class="row" id="scatter-plot">
             </div>
-            <!-- <div id="rad-container" class="mt-4" style="display: none;">
-                <div class="container-fluid">
-                    <div class="row" id="scatter-plot"></div>
-                </div>
-            </div> -->
         </div>
     </div>
 </div>
+
 {% endblock content %}
